scenarios/uc04-container-as-a-service/build-from-source/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: demo-source
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-source
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: demo-source
        deployment: demo-source
    spec:
      containers:
        - name: demo-source
          image: 'image-registry.openshift-image-registry.svc:5000/demo/demo-source'
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
